RaylibSharp/Raylib.cs


	// Type of n-patch
	public enum NPatchType {
		NPT_9PATCH = 0,         // Npatch defined by 3x3 tiles
		NPT_3PATCH_VERTICAL,    // Npatch defined by 1x3 tiles
		NPT_3PATCH_HORIZONTAL   // Npatch defined by 3x1 tiles
	}

	// TODO
	// typedef void (* TraceLogCallback) (int logType, string text, va_list args);

	public unsafe static partial class Raylib {
		const string LibName = "raylib";
		const CallingConvention CConv = CallingConvention.Cdecl;
		const CharSet CSet = CharSet.Ansi;


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void InitWindow(int width, int height, string title);  // Initialize window and OpenGL context



		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool WindowShouldClose();                               // Check if KEY_ESCAPE pressed or Close icon pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void CloseWindow();                                     // Close window and unload OpenGL context

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsWindowReady();                                   // Check if window has been initialized successfully

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsWindowMinimized();                               // Check if window has been minimized (or lost focus)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsWindowResized();                                 // Check if window has been resized

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsWindowHidden();                                  // Check if window is currently hidden

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ToggleFullscreen();                                // Toggle fullscreen mode (only PLATFORM_DESKTOP)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnhideWindow();                                    // Show the window

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void HideWindow();                                      // Hide the window

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetWindowIcon(Image image);                            // Set icon for window (only PLATFORM_DESKTOP)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetWindowTitle(string title);                     // Set title for window (only PLATFORM_DESKTOP)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetWindowPosition(int x, int y);                       // Set window position on screen (only PLATFORM_DESKTOP)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetWindowMonitor(int monitor);                         // Set monitor for the current window (fullscreen mode)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetWindowMinSize(int width, int height);               // Set window minimum dimensions (for FLAG_WINDOW_RESIZABLE)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetWindowSize(int width, int height);                  // Set window dimensions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern IntPtr GetWindowHandle();                                // Get native window handle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetScreenWidth();                                   // Get current screen width

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetScreenHeight();                                  // Get current screen height

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMonitorCount();                                  // Get number of connected monitors

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMonitorWidth(int monitor);                           // Get primary monitor width

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMonitorHeight(int monitor);                          // Get primary monitor height

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMonitorPhysicalWidth(int monitor);                   // Get primary monitor physical width in millimetres

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMonitorPhysicalHeight(int monitor);                  // Get primary monitor physical height in millimetres

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetMonitorName(int monitor);                    // Get the human-readable, UTF-8 encoded name of the primary monitor

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetClipboardText();                         // Get clipboard text content

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetClipboardText(string text);                    // Set clipboard text content

		// Cursor-related functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ShowCursor();                                      // Shows cursor

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void HideCursor();                                      // Hides cursor

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsCursorHidden();                                  // Check if cursor is not visible

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void EnableCursor();                                    // Enables cursor (unlock cursor)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DisableCursor();                                   // Disables cursor (lock cursor)

		// Drawing-related functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ClearBackground(Color color);                          // Set background color (framebuffer clear color)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void BeginDrawing();                                    // Setup canvas (framebuffer) to start drawing

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void EndDrawing();                                      // End canvas drawing and swap buffers (double buffering)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void BeginMode2D(Camera2D camera);                          // Initialize 2D mode with custom camera (2D)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void EndMode2D();                                       // Ends 2D mode with custom camera

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void BeginMode3D(Camera3D camera);                          // Initializes 3D mode with custom camera (3D)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void EndMode3D();                                       // Ends 3D mode and returns to default 2D orthographic mode

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void BeginTextureMode(RenderTexture2D target);              // Initializes render texture for drawing

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void EndTextureMode();                                  // Ends drawing to render texture

		// Screen-space-related functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Ray GetMouseRay(Vector2 mousePosition, Camera3D camera);      // Returns a ray trace from mouse position

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector2 GetWorldToScreen(Vector3 position, Camera3D camera);  // Returns the screen space position for a 3d world space position

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Matrix GetCameraMatrix(Camera3D camera);                      // Returns camera transform matrix (view matrix)

		// Timing-related functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetTargetFPS(int fps);                                 // Set target FPS (maximum)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetFPS();                                           // Returns current FPS

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern float GetFrameTime();                                   // Returns time in seconds for last frame drawn

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern double GetTime();                                       // Returns elapsed time in seconds since InitWindow()

		// Color-related functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int ColorToInt(Color color);                                // Returns hexadecimal value for a Color

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector4 ColorNormalize(Color color);                        // Returns color normalized as float [0..1]

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector3 ColorToHSV(Color color);                            // Returns HSV values for a Color

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Color ColorFromHSV(Vector3 hsv);                            // Returns a Color from HSV values

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Color GetColor(int hexValue);                               // Returns a Color public struct from hexadecimal value

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Color Fade(Color color, float alpha);                       // Color fade-in or fade-out, alpha goes from 0.0f to 1.0f

		// Misc. functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetConfigFlags(uint flags);                    // Setup window configuration flags (view FLAGS)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetTraceLogLevel(int logType);                         // Set the current threshold (minimum) log level

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetTraceLogExit(int logType);                          // Set the exit threshold (minimum) log level

		//[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		//public static extern void SetTraceLogCallback(TraceLogCallback callback);        // Set a trace log callback to enable custom logging

		//[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		//public static extern void TraceLog(int logType, string text, ...);          // Show trace log messages (LOG_DEBUG, LOG_INFO, LOG_WARNING, LOG_ERROR)
